--- a/src/app/pages/planspot/components/planspot-list/planspot-list.component.html
+++ b/src/app/pages/planspot/components/planspot-list/planspot-list.component.html
@@ -38,6 +38,7 @@
               matGoogleMapsAutocomplete
               #keyword
               id="keyword"
+              (onAutocompleteSelected)="onAutocompleteSelected($event)"
               value="{{ place ? place.name : '' }}"
             />
           </mat-form-field>
