--- a/src/app/pages/planspot/components/planspot-list/planspot-list.component.html
+++ b/src/app/pages/planspot/components/planspot-list/planspot-list.component.html
@@ -28,36 +28,10 @@
       {{ "GoogleSearchAny" | translate }}<br />
       {{ "ReplaceKeyword" | translate }}<br />
       {{ "includedPlan" | translate }}
-      <!-- Google AutoComplete Search Insert -->
-      <mat-card-content id="agm">
-        <div class="card-box">
-          <mat-form-field appearance="outline" style="width: 100%">
-            <mat-label>{{ "GoogleKeyword" | translate }}</mat-label>
-            <input
-              matInput
-              matGoogleMapsAutocomplete
-              #keyword
-              id="keyword"
-              (onAutocompleteSelected)="onAutocompleteSelected($event)"
-              value="{{ place ? place.name : '' }}"
-            />
-          </mat-form-field>
-        </div>
-        <div class="mapDiv">
-          <agm-map
-            class="map"
-            [scrollwheel]="false"
-            [streetViewControl]="false"
-            [zoom]="zoom"
-            (mapReady)="mapReady($event)"
-          >
-          </agm-map>
-          <div class="map-center-overlay" *ngIf="place">
-            <img src="../../../assets/img/pin_mypos.svg" height="48" />
-          </div>
-        </div>
-      </mat-card-content>
-      <!-- Google AutoComplete Search Insert -->
+
+      <!-- <div class='alert' *ngIf="condition.keyword">
+        <p>フリーキーワード<span>{{condition.keyword}}</span>で検索中です。</p>        
+      </div> -->
     </mat-card-content>
   </mat-card>
   <mat-card id="nolist" *ngIf="!isList && condition.select === 'user'">
