--- a/src/app/pages/plan-detail/plan-detail.component.html
+++ b/src/app/pages/plan-detail/plan-detail.component.html
@@ -414,11 +414,11 @@
 
     <!-- A8テスト -->
     <div class="box">
-      <div id="script"></div>
+      <div id="insertA8"></div>
     </div>
     <!-- コメント投稿 phase1では廃止 -->
     <!--<app-comment-list-post-panel *ngIf="reviewResult" [reviewResult]="reviewResult" [type]="$isRemojuPlan ? 2 : 3"
-      [id]="data.planId" (onCommentUpd)="onCommentUpd($event)"></app-comment-list-post-panel>--?
+      [id]="data.planId" (onCommentUpd)="onCommentUpd($event)"></app-comment-list-post-panel>-->
 
     <!-- 投稿者のプロフィール-->
     <mat-card id="writer" *ngIf="data.user || data.userStaff">
