--- a/src/app/pages/myplan/myplan.component.scss
+++ b/src/app/pages/myplan/myplan.component.scss
@@ -1770,7 +1770,7 @@ form {
   //justify-content: space-evenly;
   background-color: #fff;
   position: sticky;
-  bottom: 0;
+  bottom: -47px;
   z-index: 20;
 
   .row1 {
