--- a/src/assets/scss/_vars.scss
+++ b/src/assets/scss/_vars.scss
@@ -675,7 +675,7 @@ $color-grn01: #81c5b4;
 
 @mixin switchTran {
   .switchTran {
-    $edit: "公共交通機関";
+    $edit: "交通機関";
     $preview: "車移動";
     $edit_en: "Public";
     $preview_en: "Mycar";
