--- a/src/app/pages/planspot/components/planspot-list-item/planspot-list-item.component.scss
+++ b/src/app/pages/planspot/components/planspot-list-item/planspot-list-item.component.scss
@@ -1,5 +1,10 @@
 @import "vars";
 
+div.banner {
+  margin: 0 16px;
+  justify-content: center;
+  display: flex;
+}
 //::ng-deep .mat-card{
 #planspot-list-item {
   padding: 0;
