--- a/src/app/pages/mypage-favoritelist/mypage-favoritelist.component.html
+++ b/src/app/pages/mypage-favoritelist/mypage-favoritelist.component.html
@@ -23,6 +23,7 @@
     [lang]="lang"
     [myFavorite]="true"
     [myPlanSpots]="myPlanSpots"
+    [type]="type"
     (linked)="linktoDetail($event)"
     (addMyPlan)="addMyPlan($event)"
     (delFav)="deleteFavorite($event)"
