--- a/src/app/pages/mypage-planlist/mypage-planlist.component.html
+++ b/src/app/pages/mypage-planlist/mypage-planlist.component.html
@@ -1,4 +1,3 @@
-<ng-container *ngIf="details$?.length > 0; else noPlan">
   <!-- マイページプラン一覧 -->
   <div
     class="box"
@@ -154,11 +153,11 @@
       </mat-card>
     </ng-container>
   </div>
-</ng-container>
-<ng-template #noPlan>
+<!--/ng-container>
+<ng-template #noplan>
   <mat-card id="noPlan">
     <mat-card-content>
       <p>{{ "NoPlanMsg" | translate }}</p>
     </mat-card-content>
   </mat-card>
-</ng-template>
+</ng-template-->
