--- a/src/app/pages/myplan/myplan.component.html
+++ b/src/app/pages/myplan/myplan.component.html
@@ -637,7 +637,7 @@
   <div class="footer">
     <div class="row1">
       <!-- 共有先 -->
-      <div class="share">
+      <!--div class="share">
         <label class="time-label">{{ "ReleaseDestination" | translate }}</label>
         <div class="container" *ngIf="row">
           <select
@@ -653,7 +653,7 @@
             </option>
           </select>
         </div>
-      </div>
+      </div-->
       <!-- 保存 -->
       <div class="save">
         <button
