--- a/src/app/pages/planspot/components/planspot-list-item/planspot-list-item.component.html
+++ b/src/app/pages/planspot/components/planspot-list-item/planspot-list-item.component.html
@@ -266,6 +266,7 @@
       <div class="link-area" (click)="linktoDetail(item)"></div>
     </div>
   </ng-template>
-  <div class="banner" [innerHTML]="setA8banner(index)"></div>
+
+  <div *ngIf="show" class="banner" [innerHTML]="setA8banner(index)"></div>
 </mat-card>
 
