--- a/src/app/pages/planspot/components/planspot-list-item/planspot-list-item.component.scss
+++ b/src/app/pages/planspot/components/planspot-list-item/planspot-list-item.component.scss
@@ -928,6 +928,7 @@ div.banner {
   #planspot-list-item {
     width: calc(100% / 2);
     float: left;
+    min-height: 543px;
 
     .header {
       min-height: 62px;
