--- a/src/app/pages/planspot/components/planspot-list/planspot-list.component.html
+++ b/src/app/pages/planspot/components/planspot-list/planspot-list.component.html
@@ -3,7 +3,7 @@
   infinite-scroll
   [infiniteScrollDistance]="isList ? 5 : 5"
   [infiniteScrollUpDistance]="1.5"
-  [infiniteScrollThrottle]="75"
+  [infiniteScrollThrottle]="isMobile?150:75"
   [infiniteScrollContainer]="isMobile ? null : box"
   [scrollWindow]="isMobile ? true : false"
   [fromRoot]="isMobile ? false : true"
