--- a/src/app/pages/planspot/components/planspot-selector/planspot-selector.component.scss
+++ b/src/app/pages/planspot/components/planspot-selector/planspot-selector.component.scss
@@ -21,7 +21,10 @@
         font-weight: 600;
       }
 
-      &.input {
+      .input {
+        position:relative;
+        display: flex;
+        width: 100%;
         input {
           width: 100%;
           height: 34px;
