--- a/src/app/pages/plan-detail/plan-detail.component.scss
+++ b/src/app/pages/plan-detail/plan-detail.component.scss
@@ -36,6 +36,7 @@ div.plandtl {
     z-index: 11;
     border-radius: 0;
 
+    position: relative;
     .link {
       font-size: 14px;
       padding: 3px 12px 9px;
@@ -59,115 +60,86 @@ div.plandtl {
         }
       }
     }
+    ::ng-deep.mat-card-header {
+      .header {
+        width: 100%;
+        margin: 0 16px 4px;
+        display: flex;
+        font-weight: normal;
 
-    .header {
-      width: 100%;
-      margin: 0 16px 4px;
-      display: flex;
-      font-weight: normal;
+        .lt {
+          flex-basis: 32px;
 
-      .lt {
-        flex-basis: 32px;
+          .avatar {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
 
-        .avatar {
-          display: flex;
-          flex-direction: column;
-          justify-content: center;
-          align-items: center;
+            img {
+              width: 38px;
+              height: 38px;
+              object-fit: cover;
+              border-radius: 50%;
+              margin-top: 4px;
+            }
 
-          img {
-            width: 38px;
-            height: 38px;
-            object-fit: cover;
-            border-radius: 50%;
-            margin-top: 4px;
+            .username {
+              font-size: 11px;
+              white-space: nowrap;
+              width: 38px;
+              overflow: hidden;
+              text-align: center;
+              min-height: 13px;
+            }
           }
+        }
 
-          .username {
-            font-size: 11px;
-            white-space: nowrap;
-            width: 38px;
-            overflow: hidden;
-            text-align: center;
-            min-height: 13px;
+        .rt {
+          display: flex;
+          flex-direction: row;
+          align-items: center;
+          justify-content: space-between;
+          width: 100%;
+          margin-left: 6px;
+
+          .name {
+            display: flex;
+            align-items: center;
+            // flex-basis: 70%;
+
+            .mark {
+              img {
+                width: 41px;
+                height: 16px;
+                margin: auto 12px;
+              }
+            }
+
+            .title {
+              font-size: 16px;
+              color: #000;
+              font-weight: bolder;
+            }
           }
         }
       }
 
-      .rt {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        justify-content: space-between;
-        width: 100%;
-        margin-left: 6px;
-
-        .name {
-          display: flex;
-          align-items: center;
-          // flex-basis: 70%;
-
-          .mark {
-            img {
-              width: 41px;
-              height: 16px;
-              margin: auto 12px;
-            }
-          }
-
-          .title {
-            font-size: 16px;
-            color: #000;
-            font-weight: bolder;
-          }
-        }
-
-        .buttons {
-          display: flex;
-          align-items: center;
-          // flex-basis: 30%;
-          justify-content: flex-end;
-
-          .plan_fav {
-            img {
-              height: 16px;
-            }
-          }
-
-          .add-to-favorite {
-            box-shadow: none;
-            min-width: auto;
-            padding: 0;
-            background-color: transparent;
-            width: 30px;
-            height: 25px;
-
-            &::before {
-              content: "";
-              display: inline-block;
-              width: 20px;
-              height: 20px;
-              background: url("../../../assets/img/icon_fav_b.svg");
-              background-repeat: no-repeat;
-            }
-
-            &.on {
-              &::before {
-                background: url("../../../assets/img/icon_fav_b_on.svg");
-                background-repeat: no-repeat;
-              }
-            }
-
-            ::ng-deep.mat-button-ripple {
-              width: 0;
-              height: 0;
-            }
-          }
-
-          .plan_add {
-            all: unset;
-            width: 59px;
-          }
+      .buttons {
+        position: absolute;
+        top: 5px;
+        right: 18px;
+        button {
+          all: unset;
+          width: auto;
+          height: 28px;
+          padding: 0 6px;
+          border-radius: 4px;
+          background-color: #de7274;
+          color: white;
+          font-weight: 800;
+          font-size: 14px;
+          text-align: center;
         }
       }
     }
@@ -180,7 +152,7 @@ div.plandtl {
         height: 28px;
         position: absolute;
         right: 10px;
-        bottom: 37px;
+        top: -8px;
         animation: 0.7s ease-in 0s 1 jump;
       }
       @keyframes jump {
@@ -1528,6 +1500,7 @@ div.plandtl {
   }
 
   #writer {
+    padding-bottom: 54px;
     .card-box {
       .card-header {
         height: 159px;
